--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -6,8 +6,12 @@ $color-primary-dark: #28b485;
 $color-grey: #777;
 $color-white: #fff;
 $color-black: #000;
+// Very nice grey color
+$color-grey-light-1: #f7f7f7; 
 
 // Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+$default-font-size: 1.6rem;
