--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,7 +10,7 @@
         border-radius: 10rem;
         transition: all .2s;
         position: relative;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
     }
     
     &:hover{
@@ -52,5 +52,31 @@
         left: 0;
         z-index: -1;
         transition: all .4s;
+    }
+}
+
+.btn-text {
+    &:link,
+    &:visited{
+        display: inline-block;
+        font-size: 2rem;
+        color: $color-primary;
+        position: absolute;
+        text-decoration: none;
+        border-bottom: 1px $color-primary solid;
+        padding: .7rem .4rem;
+        transition: all .2s;
+    }
+
+    &:hover{
+        background-color: $color-primary;
+        color: $color-white;
+        transform: translateY(-.2rem);
+        box-shadow: 0 1rem 2rem rgba($color-black,.2);
+    }
+
+    &:active{
+        transform: translateY(-.3rem);
+        box-shadow: 0 .5rem 1rem rgba($color-black,.2);
     }
 }
