--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -1,6 +1,5 @@
 .row {
     max-width: $grid-width;
-    background-color: #eee;
     margin: 0 auto;
     
     @include clearfix;
@@ -9,11 +8,9 @@
         margin-bottom: $gutter-vertical;
     }
 
-
+    // Selecting all elements with attribute "class" which starts (^) with 'col-' 
     [class^="col-"]{
-        background-color: orangered;
         float: left;
-        color: $color-white;
         &:not(:last-child){
             margin-right: $gutter-horizontal;
         }
@@ -21,9 +18,6 @@
 
     .col-1-of-2 {
         width: calc((100% - #{$gutter-horizontal}) / 2);
-        background-color: orangered;
-        color: $color-white;
-        float: left;
     }
 
     .col-1-of-3{
