--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -7,6 +7,16 @@
         transform: translate(0);
     }
 }
+
+@keyframes card-move-up {
+    0%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translate(0);
+    }
+}
+
 @keyframes moveInLeft {
     0%{
         opacity: 0;
