--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 
 @import "components/button";
 @import "components/composition";
+@import "components/listcard";
 
 @import "layout/header";
 @import "layout/grid";
