--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,11 +3,17 @@
 }
 
 .u-margin-bottom-big{
-    padding-bottom: 8rem;
+    margin-bottom: 8rem;
 }
+
+
 .u-margin-bottom-medium{
-    padding-bottom: 4rem;
+    margin-bottom: 4rem;
 }
 .u-margin-bottom-small{
-    padding-bottom: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.u-margin-top-big{
+    margin-top: 8rem;
 }
