--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/button";
 @import "components/composition";
 @import "components/listcard";
+@import "components/tourcard";
 
 @import "layout/header";
 @import "layout/grid";
