--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,18 +7,20 @@
 .section-features{
     padding: 20rem 0;
     background-image:
-        linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),  
-        url(../img/nat-4.jpg);
+    linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),  
+    url(../img/nat-4.jpg);
     background-size: cover;
     // Skew trick for background
     transform: skewY(-7deg);
     margin-top: -10rem;
-
-    // background-position: top;
-    // clip-path: polygon(0 20vh, 100% 0, 100% 80vh, 0 100%);
     
-
-    & > * { // direct child selector better than in this case better than "& row" - since new thing might be added later 
-        transform: skewY(7deg);
+    & > * { // Direct child selector better than in this case better than "& row" - since new thing might be added later 
+        transform: skewY(7deg); // Skeq back
     }
+}
+
+.section-tours{
+    background-color: $color-grey-light-1;
+    padding: 25rem 0 50rem 0;
+    margin-top: -10rem;
 }
