--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -41,3 +41,15 @@
         transform: 0;
     }
 }
+
+@keyframes name-move-up {
+    0%{
+        top: 100%;
+        left: 50%;
+    }
+
+    100%{
+        top: 50%;
+        left: 50%;
+    }
+}
