--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,8 @@
 @import "components/composition";
 @import "components/listcard";
 @import "components/tourcard";
+@import "components/storycard";
+@import "components/bgvideo";
 
 @import "layout/header";
 @import "layout/grid";
