--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,6 +21,20 @@
 
 .section-tours{
     background-color: $color-grey-light-1;
-    padding: 25rem 0 50rem 0;
+    padding: 25rem 0 15rem 0;
     margin-top: -10rem;
+}
+
+.section-stories{
+    background-color: $color-grey-light-1;
+    padding: 15rem 0;
+    position: relative;
+    
+    &__heading{
+        position: relative;
+    }   
+
+    &__morebtn{
+        position: relative;
+    }   
 }
