--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/tourcard";
 @import "components/storycard";
 @import "components/bgvideo";
+@import "components/form";
 
 @import "layout/header";
 @import "layout/grid";
