--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,7 @@
 
 /* Text End */
 .btn{
+    &,
     &:link, 
     &:visited {
         text-transform: uppercase;
@@ -11,9 +12,14 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        // Overiding default <button> element styles
+        border: none;
+        cursor: pointer;
     }
     
-    &:hover{
+    &:hover,
+    &:focus{
         transform: translateY(-.3rem);
         box-shadow: 0 1rem 2rem rgba($color-black,.2);
         &::after{
