--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -53,3 +53,12 @@
         left: 50%;
     }
 }
+
+@keyframes nav-item-hover{
+    0%{
+        background-image: linear-gradient(105deg, transparent 90%, $color-white 90% 100%);
+    }
+    100%{
+        background-image: linear-gradient($color-white 0 100%);
+    }
+}
