Added working popup from scratch

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 @import "components/storycard";
 @import "components/bgvideo";
 @import "components/form";
+@import "components/popup";
 
 @import "layout/header";
 @import "layout/footer";
