--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,16 @@
     padding: 10rem 0;
     font-size: 1.4rem;
 
+    @include respond(tab-land){
+        padding: 5rem 2rem;
+    }
+
     &__logo-box{
         text-align: center;
         margin-bottom: 8rem;
+        @include respond(tab-port){
+            margin-bottom: 5rem;
+        }
     }
     
     &__logo{
@@ -20,6 +27,11 @@
         display: inline-block;
         padding-top: 2rem;
         border-top: 1px solid $color-grey;
+        
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list{
@@ -32,6 +44,7 @@
         &:not(:last-child){
             margin-right: 1.5rem;
         }
+        
     }
 
     &__link{
@@ -57,5 +70,9 @@
         float: right;
         padding-top: 2rem;
         border-top: 1px solid $color-grey;
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+        }
     }
 }
