--- a/css/style.css
+++ b/css/style.css
@@ -170,26 +170,44 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem; } }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem; } }
 
 .u-padding-bottom-medium {
   padding-bottom: 4rem; }
+  @media (max-width: 56.25em) {
+    .u-padding-bottom-medium {
+      padding-bottom: 3rem; } }
 
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
 .u-margin-top-big {
   margin-top: 8rem; }
+  @media (max-width: 56.25em) {
+    .u-margin-top-big {
+      margin-top: 5rem; } }
 
 .u-margin-top-huge {
   margin-top: 10rem; }
+  @media (max-width: 37.5em) {
+    .u-margin-top-huge {
+      margin-top: 5rem; } }
 
 .section-about {
   background-color: #f7f7f7;
-  padding: 25rem;
+  padding: 25rem 0;
   margin-top: -25vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 25rem 0; } }
 
 .section-features {
   padding: 20rem 0;
@@ -199,16 +217,25 @@ body {
   margin-top: -10rem; }
   .section-features > * {
     transform: skewY(7deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 15rem 0 10rem; } }
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 15rem 0;
+  padding: 25rem 0 15rem;
   margin-top: -10rem; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 18rem 0 10rem; } }
 
 .section-stories {
   background-color: #f7f7f7;
   padding: 15rem 0;
   position: relative; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
   .section-stories__heading {
     position: relative; }
   .section-stories__morebtn {
@@ -217,6 +244,9 @@ body {
 .section-booking {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+  @media (max-width: 56.25em) {
+    .section-booking {
+      padding: 10rem 0; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 50%, transparent 50% 100%), url(../img/nat-10.jpg);
@@ -224,9 +254,17 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
   height: 50rem; }
+  @media (max-width: 56.25em) {
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.85) 100%, transparent 100% 100%), url(../img/nat-10.jpg);
+      height: 55rem; } }
   .book__form {
     width: 50%;
     padding: 6rem; }
+    @media (max-width: 56.25em) {
+      .book__form {
+        width: 100%;
+        padding: 6rem 2rem; } }
 
 /* Text End */
 .btn {
@@ -304,15 +342,35 @@ body {
     transition: all .2s;
     z-index: 10;
     outline-offset: 2rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.333333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 0;
+          transform: scale(1.2); } }
     .composition__photo--p2 {
       top: 2rem;
       right: 0; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: -1rem;
+          transform: scale(1.3);
+          z-index: 1000; } }
     .composition__photo--p3 {
       top: 10rem;
       left: 20%; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 1rem;
+          left: 0;
+          transform: scale(1.2); } }
     .composition__photo:hover {
       transform: scale(1.05) translate(-0.5rem);
       z-index: 20;
@@ -320,6 +378,10 @@ body {
       outline: 1.5rem solid #55c57a; }
       .composition__photo:hover ~ img {
         transform: scale(0.95); }
+      @media (max-width: 56.25em) {
+        .composition__photo:hover {
+          transform: scale(1.4);
+          z-index: 1001; } }
 
 .listcard {
   padding: 2rem;
@@ -352,7 +414,6 @@ body {
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    position: relative;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px; }
     .card__img--1 {
@@ -382,6 +443,12 @@ body {
       padding: 1rem 1.5rem;
       -webkit-box-decoration-break: clone;
       box-decoration-break: clone; }
+  .card__title--1 {
+    background-image: linear-gradient(to right, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+  .card__title--2 {
+    background-image: linear-gradient(to right, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
+  .card__title--3 {
+    background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
   .card__details {
     padding: 1rem 3rem; }
     .card__details ul {
@@ -426,6 +493,36 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card__header {
+        top: 16rem;
+        width: 85%; }
+        .card__header--3 {
+          top: 12rem;
+          width: 75%; }
+      .card__side {
+        height: 60rem;
+        padding-bottom: 10rem;
+        position: relative;
+        box-shadow: none; }
+        .card__side--back {
+          height: 38rem;
+          margin-top: -13rem;
+          padding: 10rem 0 0;
+          transform: rotateY(0);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card__price {
+        margin-bottom: 4rem; } }
+  @media (max-width: 37.5em) {
+    .card__header {
+      width: 90%; }
+      .card__header--3 {
+        width: 75%; } }
 
 .story-card {
   width: 75%;
@@ -438,6 +535,10 @@ body {
   position: relative;
   transform: skewX(-7deg);
   transition: all .8s; }
+  @media (max-width: 75em) {
+    .story-card {
+      width: 100%;
+      transform: skewX(0); } }
   .story-card__shape {
     transform: skewX(7deg);
     width: 15rem;
@@ -446,6 +547,14 @@ body {
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     margin-right: 4rem; }
+    @media (max-width: 75em) {
+      .story-card__shape {
+        transform: skewX(0); } }
+    @media (max-width: 37.5em) {
+      .story-card__shape {
+        display: block;
+        float: initial;
+        margin: 0 auto; } }
   .story-card__img {
     height: 100%;
     transform: translateX(-3.5rem) scale(1.5);
@@ -460,6 +569,11 @@ body {
     transform: translate(-50%, -50%);
     visibility: hidden;
     color: #fff; }
+  @media (max-width: 37.5em) {
+    .story-card__text {
+      padding-top: 3rem;
+      display: block;
+      width: 100%; } }
   .story-card:hover .story-card__img {
     filter: blur(3px) brightness(85%);
     transform: translateX(-3.5rem) scale(1); }
@@ -492,6 +606,9 @@ body {
   background-color: rgba(255, 255, 255, 0.6);
   border-bottom: 3px solid transparent;
   transition: all .3s; }
+  @media (max-width: 75em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -517,6 +634,10 @@ body {
 .form__radio-group {
   width: 48%;
   display: inline-block; }
+  @media (max-width: 56.25em) {
+    .form__radio-group {
+      margin-top: 2rem;
+      display: block; } }
 
 .form__radio-input {
   display: none; }
@@ -554,6 +675,10 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #55c57a; }
+
+@media (max-width: 56.25em) {
+  .form__btn-wrap {
+    padding-top: 2rem; } }
 
 .popup {
   position: fixed;
@@ -621,6 +746,9 @@ body {
   position: relative;
   /* So that .logo-box relative would work */
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  @media (max-width: 37.5em) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -646,15 +774,25 @@ body {
   color: #fff;
   padding: 10rem 0;
   font-size: 1.4rem; }
+  @media (max-width: 75em) {
+    .footer {
+      padding: 5rem 2rem; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        margin-bottom: 5rem; } }
   .footer__logo {
     width: 15rem; }
   .footer__navigation {
     display: inline-block;
     padding-top: 2rem;
     border-top: 1px solid #777; }
+    @media (max-width: 56.25em) {
+      .footer__navigation {
+        width: 100%;
+        text-align: center; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -677,20 +815,38 @@ body {
     float: right;
     padding-top: 2rem;
     border-top: 1px solid #777; }
+    @media (max-width: 56.25em) {
+      .footer__copyright {
+        width: 100%;
+        text-align: center; } }
 
 .row {
   max-width: 114rem;
   margin: 0 auto; }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem;
+      padding: 0 3rem; } }
   .row::after {
     content: "";
     display: table;
     clear: both; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
@@ -719,6 +875,10 @@ body {
   z-index: 2000;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center; }
+  @media (max-width: 56.25em) {
+    .navigation__btn {
+      top: 3rem;
+      right: 3rem; } }
 
 .navigation__checkbox:checked ~ .navigation__background {
   transform: scale(80); }
@@ -737,6 +897,10 @@ body {
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
   transition: transform 0.7s cubic-bezier(0.86, 0, 0.07, 1); }
+  @media (max-width: 56.25em) {
+    .navigation__background {
+      top: 3.3rem;
+      right: 3.3rem; } }
 
 .navigation__nav {
   opacity: 0;
