--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,9 +6,7 @@ body {
     /* font-size: 16px; Replaced by default Rem*/
     line-height: 1.7;
     color: $color-grey;
-    padding: 3rem;
 }
-
 
 .heading-primary{
     color: $color-white;
@@ -22,6 +20,11 @@ body {
     
         animation-name: moveInLeft;
         animation-duration: .8s;
+
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
         /* Ohter nice to know stuff
         animation-timing-function: ease-in;
         animation-iteration-count: 3;
@@ -33,6 +36,10 @@ body {
         font-size: 2rem;
         font-weight: 700;
         letter-spacing: 1.7rem;
+        
+        @include respond(phone){
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -47,6 +54,14 @@ body {
     color: transparent;
     letter-spacing: 2px;
     transition: all .2s;
+
+    @include respond(tab-port){
+        font-size: 3rem;
+    }
+
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
 
     &:hover{
         transform: skewY(2deg) skewX(2deg) scale(1.1);
