--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -4,13 +4,25 @@
 
 .u-margin-bottom-big{
     margin-bottom: 8rem;
+    
+    @include respond(tab-port){
+        margin-bottom: 5rem;
+    }
 }
 
 .u-margin-bottom-medium{
     margin-bottom: 4rem;
+
+    @include respond(tab-port){
+        margin-bottom: 3rem;
+    }
 }
 .u-padding-bottom-medium{
     padding-bottom: 4rem;
+    
+    @include respond(tab-port){
+        padding-bottom: 3rem;
+    }
 }
 .u-margin-bottom-small{
     margin-bottom: 1.5rem;
@@ -18,8 +30,15 @@
 
 .u-margin-top-big{
     margin-top: 8rem;
-}
 
+    @include respond(tab-port){
+        margin-top: 5rem;
+    }
+}
 .u-margin-top-huge{
     margin-top: 10rem;
+    
+    @include respond(phone){
+        margin-top: 5rem;
+    }
 }
