--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -9,20 +9,43 @@
         transition: all .2s;
         z-index: 10;
         outline-offset: 2rem;
+
+        @include respond(tab-port){
+            float: left;
+            position: relative;
+            width: 33.333333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+        }
         
         &--p1{
             left: 0;
             top: -2rem;
+            @include respond(tab-port){
+                top: 0;
+                transform: scale(1.2);
+            }
         }
 
         &--p2{
             top: 2rem;
             right: 0;
+
+            @include respond(tab-port){
+                top: -1rem;
+                transform: scale(1.3);
+                z-index: 1000;
+            }
         }
 
         &--p3{
             top: 10rem;
             left: 20%;
+
+            @include respond(tab-port){
+                top: 1rem;
+                left: 0;
+                transform: scale(1.2);
+            }
         }
         
         &:hover{
@@ -33,6 +56,10 @@
 
             ~ img {
                 transform: scale(.95);
+            }
+            @include respond(tab-port){
+                transform: scale(1.4);
+                z-index: 1001;
             }
         }
         
