--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,7 +5,6 @@
         // Best way to reset font stuff for elements that do not inhearit global
         font-family: inherit; 
         color: inherit;
-
         display: block; 
         width: 85%;
         border: none;
@@ -13,7 +12,10 @@
         background-color: rgba($color-white, .6);
         border-bottom: 3px solid transparent; // If border added only on focus - it twearks 
         transition: all .3s;
-        
+
+        @include respond(tab-land){
+            width: 100%;
+        }
         
         &:focus{
             outline: none;
@@ -50,6 +52,11 @@
     &__radio-group{
         width: 48%;
         display: inline-block;
+        
+        @include respond(tab-port){
+            margin-top: 2rem;
+            display: block;
+        }
     }
 
     &__radio-input{
@@ -92,6 +99,13 @@
             left: 50%;
             transform: translate(-50%, -50%);
             background-color: $color-primary;
+        }
+    }
+
+    
+    @include respond(tab-port){
+        &__btn-wrap{
+            padding-top: 2rem;
         }
     }
 
