--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,10 +8,12 @@
         url(../img/hero.jpg);
     background-size: cover; // Zooms in the image if needed
     background-position: top;
-    
     position: relative; /* So that .logo-box relative would work */
-    
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+    @include respond(phone){
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
 
     &__logo-box{
         position: absolute;
