--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,6 +15,11 @@
         z-index: 2000;
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
         text-align: center;
+
+        @include respond(tab-port){
+            top: 3rem;
+            right: 3rem;
+        }
     }
     
     &__checkbox:checked ~ &__background{
@@ -36,6 +41,11 @@
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: 1000;
         transition: transform .7s cubic-bezier(.86, 0, .07, 1);
+
+        @include respond(tab-port){
+            top: 3.3rem;
+            right: 3.3rem;
+        }
     }
 
     &__nav{
