--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -1,11 +1,20 @@
 .row {
     max-width: $grid-width;
     margin: 0 auto;
+
+    @include respond(tab-port) {
+        max-width: 50rem;
+        padding: 0 3rem;
+    }
     
     @include clearfix;
 
     &:not(:last-child){
         margin-bottom: $gutter-vertical;
+        
+        @include respond(tab-port) {
+            margin-bottom: $gutter-vertical-small;
+        }
     }
 
     // Selecting all elements with attribute "class" which starts (^) with 'col-' 
@@ -13,6 +22,15 @@
         float: left;
         &:not(:last-child){
             margin-right: $gutter-horizontal;
+
+            @include respond(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+
+        @include respond(tab-port) {
+            width: 100% !important;
         }
     }
 
