--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -5,10 +5,11 @@
     height: 100vh;
     width: 100%;
     z-index: 2001;
-    background-color: rgba($color-black, .75);
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, .3);
 
     &:target{
         opacity: 1;
