--- a/sass/components/_tourcard.scss
+++ b/sass/components/_tourcard.scss
@@ -152,7 +152,9 @@
         font-weight: 100;
     }
 
-    @include respond(tab-port){
+    // @include respond(tab-port){
+    @media only screen and (max-width: 56.25em),
+        only screen and (hover: none) { // (hover: none) - condition if user can not hover (is using touch device)
         height: auto;
         box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.15);
 
