--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -20,14 +20,28 @@
 @keyframes moveInLeft {
     0%{
         opacity: 0;
-        transform: translateX(-10rem);
+        transform: translate(-10rem);
     }   
     80%{
-        transform: translate(1rem);
+        transform: translate(2rem);
     }
     100%{
         opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveInRight {
+    0%{
+        opacity: 0;
+        transform: translate(10rem);
+    }   
+    80%{
+        transform: translate(-2rem);
+    }
+    100%{
         transform: translate(0);
+        opacity: 1;
     }
 }
 
