--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -6,6 +6,10 @@
         max-width: 50rem;
         padding: 0 3rem;
     }
+
+    @include respond(tab-land) {
+        padding: 0 3rem;
+    }
     
     @include clearfix;
 
