--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,7 +4,10 @@
     margin-top: -25vh;
 
     @include respond(tab-port){
-        padding: 25rem 0;
+        padding: 40rem 0 25rem;
+    }
+    @include respond(phone){
+        padding: 30rem 0;
     }
 }
 
@@ -83,6 +86,9 @@
 
         @include respond(tab-port){
             width: 100%;
+            padding: 6rem 2rem;
+        }
+        @include respond(tab-land){
             padding: 6rem 2rem;
         }
     }
