--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -20,6 +20,7 @@
         position: relative;
         background-color: $color-white;
         width: 70%;
+        max-width: 100rem;
         margin: auto;
         margin-top: 12rem;
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
@@ -27,6 +28,13 @@
         opacity: 0;
         transform: scale(.3);
         transition: all .5s .2s;
+        overflow:auto;
+
+        @include respond(phone){
+            width: 90%;
+            padding-top: 3rem;
+            margin-top: 2rem;
+        }
     }
 
     &:target &__content{
@@ -41,6 +49,7 @@
         top: 1rem;
         right: 2rem;
         text-decoration: none;
+        z-index: 2002;
 
 
         &:hover,
@@ -49,16 +58,31 @@
             cursor: pointer;
         }
     }
+    &__row{
+        position: relative;
+    }
+    
+    &__img-wraper{
+        float: left;
+        width: 33.33333%;
 
+        @include respond(tab-land){
+            display: none;
+        }
+    }
+    
     &__img{
         display: block;
         width: 100%;
-        height: 50%;
     }
-
+    
     &__text-wraper{
-        padding: 2rem 3rem 2rem 0;
-
+        width: 65%;
+        float: right;
+        padding: 3rem 2rem;
+        @include respond(tab-land){
+            width: 100%;
+        }
     }
 
     &__heading2-wraper{
@@ -76,9 +100,16 @@
         column-rule: 1px solid $color-grey-light-2;
         hyphens: auto;
 
+        @include respond(phone){
+            column-count: 1;
+        }
     }
 
     &__btn-wraper{
-        padding-top: 3rem;
+        padding-top: 4rem;
+        
+        @include respond(phone){
+            text-align: center;
+        }
     }
 }
